# hal-intel

./: LICENSE  README.md  README.rst  bsp_sedi_docs.html  test.txt
.github/: CODEOWNERS
.github/workflows/: checkpatch.yml  codeql.yml  copilot-setup-steps.yml  iut_zephyr_build.yml  sedi_docs_update.yml
bsp_sedi/drivers/dma/: sedi_dma_ann_1p0.c  sedi_dma_ann_1p0.h  sedi_dma_dw_axi.c
bsp_sedi/drivers/gpio/: sedi_gpio.c  sedi_gpio.h
bsp_sedi/drivers/hpet/: sedi_hpet.c  sedi_hpet.h
bsp_sedi/drivers/i2c/: sedi_i2c_dw_apb_200a.c  sedi_i2c_dw_apb_200a.h
bsp_sedi/drivers/i3c/: i3c_hci.c  i3c_hci.h
bsp_sedi/drivers/ipc/: sedi_ipc.c  sedi_ipc.h
bsp_sedi/drivers/rtc/: sedi_rtc.c
bsp_sedi/drivers/spi/: sedi_spi_dw_apb.c  sedi_spi_dw_apb.h
bsp_sedi/drivers/usart/: sedi_dw_uart.c  sedi_dw_uart.h
bsp_sedi/include/: sedi_stats_utils.h
bsp_sedi/include/driver/: sedi_driver_common.h  sedi_driver_dma.h  sedi_driver_gpio.h  sedi_driver_hpet.h  sedi_driver_i2c.h  sedi_driver_i3c.h  sedi_driver_ipc.h  sedi_driver_pm.h  sedi_driver_rtc.h  sedi_driver_spi.h  sedi_driver_uart.h
bsp_sedi/soc/common/include/: sedi_dma_misc_regs.h  sedi_dma_regs.h  sedi_dmac_regs.h  sedi_gpio_regs.h  sedi_hpet_regs.h  sedi_i2c_regs.h  sedi_i3c_regs.h  sedi_ipc_regs.h  sedi_misc_regs.h  sedi_pmu_regs.h  sedi_reg_defs.h  sedi_spi_regs.h  sedi_uart_regs.h
bsp_sedi/soc/intel_ish/: sedi_soc.c
bsp_sedi/soc/intel_ish/include/: sedi_driver_core.h  sedi_misc_regs.h  sedi_soc.h  sedi_soc_defs.h  sedi_soc_funcs.h  sedi_soc_regs.h
bsp_sedi/soc/intel_ish/pm/: ia_structs.h  ish_dma.c  ish_dma.h  ish_pm.c  ish_pm.h  pm_regs.h  sedi_pm.c
bsp_sedi/soc/intel_ish/pm/aon/: aon_defs.h  aon_share.h  aon_task.c  ish_aontask.c  ish_dma.c  ish_ipapg.S
bsp_sedi/soc/intel_ish/pm/aon/include/: ish_aon_defs.h  ish_aon_share.h  ish_dma.h  ish_ia_structs.h  ish_pm.h  ish_power_mgt.h  ish_registers.h
bsp_sedi_docs/: annotated.html  aon__defs_8h_source.html  aon__share_8h_source.html  classes.html  dir_11e4c20cd87b2d7448c46472162dcc93.html  dir_33cdb2919a440ccf2784fd35903ab40e.html  dir_3a8a9342391a0ff4b0d7f9961920a79b.html  dir_3bbe50684315ab6e8ec41db06e00469b.html  dir_3c919355ac5e9f77477559ad348025d9.html  dir_3dc0b3a14130bf206e60243500db14e1.html  dir_3dc28f931e8b80c792ff34878a66a6b9.html  dir_4676c7652aa616a9e170b61b4488d437.html  dir_56c8ba4277787a4135a4919d581f810a.html  dir_5de415b086ada526bec964e16d28b3ab.html  dir_717109628e1fdc9216a95f30bfa511c3.html  dir_74b394effe2c5b28059326a51cd5d981.html  dir_836c72fec93868a8a088f68ee3e59826.html  dir_a153c738e8defe49aafeb928d751aa66.html  dir_a4ca9dce998d499394bcbb4cd465c12c.html  dir_b1c8beacaf85ea0bd308220efb05e31b.html  dir_c66251402539463ee4a6ec064ad9d123.html  dir_cb0b45861b07bda264ed6c84f49309db.html  dir_f323a90e37b00118ed28ffc7d9645a5c.html  dir_f6c6c60df0928d04162e62198064b254.html  files.html  functions.html  functions_vars.html  graph_legend.html  group__dma__control__codes.html  group__dma__control__codes.map  group__dma__control__codes.md5  group__dma__event.html  group__dma__event.map  group__dma__event.md5  group__dma__event__handler.html  group__dma__event__handler.map  group__dma__event__handler.md5  group__dma__function__calls.html  group__dma__function__calls.map  group__dma__function__calls.md5  (+367 more)
bsp_sedi_docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  groups_2.js  (+27 more)
docs/: bsp_sedi_doxyfile
soc/arm/elkhart_lake_pse/sedi/drivers/common/: sedi_common.c
soc/arm/elkhart_lake_pse/sedi/drivers/ipc/: fwst.c  ipc_bsp.c  ipc_bsp.h
soc/arm/elkhart_lake_pse/sedi/drivers/pm/: pm.c  pm_internal_if.h  pm_regs.h
soc/arm/elkhart_lake_pse/sedi/drivers/usart/: dw_uart.c  dw_uart_priv.h
soc/arm/elkhart_lake_pse/sedi/include/: bsp_config.h  config.h  dashboard_reg.h  pm_share.h  pse_hw_defs.h  sedi.h  sedi_driver.h  sedi_driver_common.h  sedi_driver_core.h  sedi_driver_dma.h  sedi_driver_ipc.h  sedi_driver_pm.h  sedi_driver_sideband.h  sedi_driver_tsn.h  sedi_driver_uart.h  sedi_soc.h  sedi_soc_regs.h
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/bsp_sedi/: CMakeLists.txt  Kconfig  bsp_sedi_rtos_utils.c
zephyr/bsp_sedi/pm/: CMakeLists.txt
zephyr/bsp_sedi/pm/aon/: CMakeLists.txt
zephyr/drivers/: CMakeLists.txt
zephyr/drivers/dma/: CMakeLists.txt
zephyr/drivers/gpio/: CMakeLists.txt
zephyr/drivers/i2c/: CMakeLists.txt
zephyr/drivers/ipm/: CMakeLists.txt
zephyr/drivers/serial/: CMakeLists.txt
zephyr/drivers/spi/: CMakeLists.txt
zephyr/iut_test/: CMakeLists.txt  app.overlay  custom-sections.ld  prj.conf
zephyr/iut_test/include/: iut.h  iut_zephyr.h
zephyr/iut_test/src/: main.c  shell_iut.c  test_example.c
zephyr/iut_test/test_sedi/: CMakeLists.txt  test_sedi_dma.c  test_sedi_rtc.c
zephyr/iut_test/test_zephyr/: CMakeLists.txt
zephyr/iut_test/test_zephyr/bluetooth/: test_hci.c
zephyr/iut_test/test_zephyr/dma/: test_dma_m2m.c
zephyr/iut_test/test_zephyr/gpio/: test_gpio.c
zephyr/iut_test/test_zephyr/i2c/: test_i2c_log.c
zephyr/iut_test/test_zephyr/include/: iut_zephyr.h
zephyr/iut_test/test_zephyr/pm/: test_pm.c
zephyr/iut_test/test_zephyr/timer/: test_sys_clock.c
zephyr/iut_test/test_zephyr/x86/: test_fatal.c
zephyr/subsys/: CMakeLists.txt
zephyr/subsys/logging/backends/: CMakeLists.txt  Kconfig.i2c  log_backend_i2c.c
